v2.5.0 - Auto-configure PrismLauncher via shutdown hook (after it saves config)